[tool.poetry]
name = "job-scheduler"
version = "0.1.0"
description = "A job scheduler that supports creating and executing jobs based on a schedule"
authors = ["Uriel Mandujano <uriel.mandujano14@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
redis = "^3.5.3"
rejson = "^0.5.4"
pytest = "^6.1.1"
aioredis = "^1.3.1"
croniter = "^0.3.35"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.1.1"
isort = "^5.6.4"
requests = "^2.24.0"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["job_scheduler", "test"]