[tool.poetry]
name = "job-scheduler"
version = "0.1.0"
description = "A job scheduler that supports creating and executing jobs based on a schedule"
authors = ["Uriel Mandujano <uriel.mandujano14@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
aioredis = "^2.0.0"
croniter = "^0.3.35"
pytz = "^2020.1"
aiohttp = "^3.7.3"
environ-config = "^20.1.0"
aio-pika = "^6.8.0"
structlog = "^21.2.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.27"}
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]
mypy = "^0.900"
black = "^20.8b1"
pytest = "^6.1.1"
isort = "^5.6.4"
requests = "^2.24.0"
coverage = "^5.3"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
pytest-aiohttp = "^0.3.0"
httpx = "^0.16.1"
"aws-cdk.core" = "^1.114.0"
"aws-cdk.aws-ecs" = "^1.114.0"
"aws-cdk.aws-ec2" = "^1.114.0"
"aws-cdk.aws-elasticache" = "^1.114.0"
"aws-cdk.aws-elasticloadbalancingv2" = "^1.114.0"
"aws-cdk.aws-ecr" = "^1.114.0"
typer = {version = "^0.3.2", extras = ["all"]}
Pygments = "^2.8.1"
PyYAML = "^5.4.1"
"aws-cdk.aws-amazonmq" = "^1.125.0"
rich = "^10.13.0"
watchgod = "^0.7"
types-croniter = "^1.0.3"
types-PyYAML = "^6.0.0"
types-pytz = "^2021.3.0"
types-requests = "^2.26.0"
#burgeon = { path = "../burgeon", develop = true}
burgeon = "^0.1.0"

[tool.poetry.scripts]
js-cli = "job_scheduler.cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["job_scheduler", "test", "cdk"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true